# gas_meter

./: .gitignore  _cfg.py  _image_processing.py  _ravendb.py  app.py  config.yaml  config.yml  gasmeter.service  imagestore.py  pyproject.toml  readme.md
test/: test_image_processing.py
